--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "bin": {
-    "magnet": "./bin/cli.js"
+    "magnet": "./src/index.js"
   },
   "type": "module",
   "keywords": [],
@@ -15,10 +15,11 @@
   "description": "",
   "dependencies": {
     "chalk": "^5.4.1",
+    "express": "^4.21.2",
     "inquirer": "^12.3.0",
     "open": "^10.1.0",
     "ora": "^8.1.1",
     "torrent-search-api": "^2.1.4",
-    "webtorrent-cli": "^5.1.3"
+    "webtorrent": "^1.9.7"
   }
 }
